--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
-body {
-    background-image: url("https://s-media-cache-ak0.pinimg.com/originals/31/4c/58/314c58cdd3d3387d984a701965cd02b7.png");
+/*body {*/
+    /*background-image: url("https://s-media-cache-ak0.pinimg.com/originals/31/4c/58/314c58cdd3d3387d984a701965cd02b7.png");*/
+/*}*/
+
+.hideMyElements {
+    display: none;
 }
