--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,19 @@
-/*body {*/
-    /*background-image: url("https://s-media-cache-ak0.pinimg.com/originals/31/4c/58/314c58cdd3d3387d984a701965cd02b7.png");*/
-/*}*/
+#left {
+    width: 500px;
+    margin: 15px;
+    float: left;
+    font-size: 22px;
+}
 
-.hideMyElements {
-    display: none;
+#middle {
+    max-width: 1100px;
+    margin-left: 100px;
+    margin-top: 5px;
+}
+
+#right {
+    margin: 15px;
+    width: 500px;
+    float: right;
+    font-size: 22px;
 }
